# X7s

./: .gitignore  .gitmodules  README.md  remote_X7s_SDK.sh
00-sh/: 01make.sh  02make.sh
00-sh/ROS/: 01make.sh  remote_X7s.sh
00-sh/ROS2/: 01make.sh  02make.sh  remote_X7s.sh
ARX_CAN/: arx_can.rules  can.sh
ARX_CAN/tools/: L.sh  R.sh  head.sh
ARX_X7s_SDK/: X7_ARX.sh  make.sh
ARX_X7s_SDK/ARX7_L/src/arm_control/: CMakeLists.txt
ARX_X7s_SDK/ARX7_L/src/arm_control/include/App/: arm_control.h  play.h  solve.h
ARX_X7s_SDK/ARX7_L/src/arm_control/models/X78009LEFTB/: package.xml
ARX_X7s_SDK/ARX7_L/src/arm_control/models/X78009LEFTB/launch/: gazebo.launch
ARX_X7s_SDK/ARX7_L/src/arm_control/models/X78009LEFTB/meshes/: base_link.STL  link5.STL
ARX_X7s_SDK/ARX7_L/src/arm_control/models/X78009LEFTB/urdf/: X78009LEFTB.csv
ARX_X7s_SDK/ARX7_L/src/arm_control/models/X78009RIGHTB/meshes/: base_link.STL  link3.STL  link4.STL  link5.STL  link7.STL
ARX_X7s_SDK/ARX7_L/src/arm_control/models/X78009RIGHTB/urdf/: X78009RIGHTB.csv  X78009RIGHTB.urdf
ARX_X7s_SDK/ARX7_L/src/arm_control/models/X7Sleft1/: CMakeLists.txt
ARX_X7s_SDK/ARX7_L/src/arm_control/models/left240929X7C/: package.xml
ARX_X7s_SDK/ARX7_L/src/arm_control/src/: arx.cpp
ARX_X7s_SDK/ARX7_L/src/arm_control/teach_record/: out.txt  out1.txt
ARX_X7s_SDK/ARX7_R/: X7.sh
ARX_X7s_SDK/ARX7_R/src/arm_control/: CMakeLists.txt
ARX_X7s_SDK/ARX7_R/src/arm_control/include/App/: arm_control.h  solve.h
ARX_X7s_SDK/ARX7_R/src/arm_control/models/: X7Sleft1.7z  x7sRIGHT.7z
ARX_X7s_SDK/ARX7_R/src/arm_control/models/X78009LEFTB/: CMakeLists.txt
ARX_X7s_SDK/ARX7_R/src/arm_control/models/X78009RIGHTB/: CMakeLists.txt  package.xml
ARX_X7s_SDK/ARX7_R/src/arm_control/models/X7Sleft1/: package.xml
ARX_X7s_SDK/ARX7_R/src/arm_control/models/left240929X7C/: CMakeLists.txt
ARX_X7s_SDK/ARX7_R/src/arm_control/models/x7sRIGHT/: CMakeLists.txt  package.xml
ARX_X7s_SDK/ARX7_R/src/arm_control/src/: arx.cpp
ARX_X7s_SDK/ARX7_R/src/arm_control/teach_record/: out.txt  out1.txt
X7s_Body_SDK/: LIFT.sh
X7s_Body_SDK/src/arm_control/: CMakeLists.txt  package.xml
X7s_Body_SDK/src/arm_control/include/App/: arm_control.h  solve.h
X7s_Body_SDK/src/arm_control/src/: arx_5v.cpp
body/Python/ARX_LIFT_python/: setup.sh  test_lift.py
body/Python/ARX_LIFT_python/lift_controller/: build.sh
body/Python/ARX_LIFT_python/lift_controller/src/: lift_control_loop.cpp
body/ROS/src/ARX_LIFT_ros/arx_lift_controller/: CMakeLists.txt  package.xml
body/ROS/src/ARX_LIFT_ros/arx_lift_controller/launch/: x7s.launch
body/ROS/src/ARX_LIFT_ros/arx_lift_controller/src/: body_state_publisher.cpp  lift_controller.cpp
body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/: CMakeLists.txt  package.xml
body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/src/: lift_controller.cpp
code/: 3dpointcloud.py  align_left_grasp.npy  align_right_grasp.npy  calibration.py  color3dmapper.py  container2_center.npy  container_center.npy  container_pt.ply  depth_to_color.py  entry_point.npy  estimate_center.py  estimate_point.py  extrinsic.py  find_tangent_pose.py  findpose_align.py  findpose_lid.py  findpose_open.py  findpose_open_trans.py  findpose_plate.py  generate_pt.py  grasp_plate_pose.py  grasp_point.npy  grasp_pose_transformed.npy  intersection_point.npy  lid_center.npy  mapper.py  observation.py  plate_center.npy  plate_pt.ply  resize.py  ros_sender.py  rosservice.py  size.py  task1_actions.py  task1_perception.py  task2_container_perception.py  task2_perception.py  task2_pizza_action.cpp  task2_pizza_perception.py  task3_container_perception.py  (+4 more)
datasets/: camera_intrinsics.json
datasets/sample_0/subtask1/camera_h/: camera_intrinsics.json  convert_cam.py
datasets/sample_0/subtask1/camera_h/processing/: best_point_ftn_3_15_12_04.ply  best_point_ftn_3_15_35_59.ply  crop1.ply  edges.ply  grasp_mean_point_15_12_05.ply  grasp_mean_point_15_12_20.ply  grasp_mean_point_15_36_00.ply  grasp_pose_2025-05-05_06-12-33-581557.json  grasp_pose_2025-05-05_06-36-13-689675.json  pointcloud_edges.ply  without_table.ply
datasets/sample_0/subtask1/camera_l/: camera_intrinsics.json
datasets/sample_0/subtask1/observation_start/: camera_pose_in_world.json
datasets/sample_0/subtask3/camera_l/: camera_intrinsics.json
datasets/sample_2/subtask1/camera_l/: camera_intrinsics.json
vrserialportsdk/: ARX_VR.sh
vrserialportsdk/src/serial_port/: CMakeLists.txt
vrserialportsdk/src/serial_port/src/: serial_port.cpp
x7s/ROS/x7s_ws/src/ARX_x7_ros/arx_x7_controller/: CMakeLists.txt  package.xml
x7s/ROS/x7s_ws/src/ARX_x7_ros/arx_x7_controller/include/arx_x7_controller/: ros_control.hpp  x7_controller.hpp
x7s/ROS/x7s_ws/src/ARX_x7_ros/arx_x7_controller/launch/: left_arm.launch  right_arm.launch
x7s/ROS/x7s_ws/src/ARX_x7_ros/arx_x7_controller/src/: arm_state_publisher.cpp  ros_control.cpp  task1_action.cpp  task2_action.cpp  task2_container_action.cpp  task2_pizza_action.cpp  task3_action.cpp  task3_container_action.cpp  task3_pizza_action.cpp  x7_controller.cpp
x7s/ROS/x7s_ws/src/ARX_x7_ros/arx_x7_controller/srv/: ActionSuccess.srv  LeftPose.srv  Pose3D.srv  Pose_loop.srv  RightPose.srv  SinglePose.srv
x7s/ROS2/x7s_ws/src/ARX_x7_ros2/arx_x7_controller/: CMakeLists.txt  package.xml
x7s/ROS2/x7s_ws/src/ARX_x7_ros2/arx_x7_controller/config/: left_arm.yaml  right_arm.yaml
x7s/ROS2/x7s_ws/src/ARX_x7_ros2/arx_x7_controller/include/arx_x7_controller/: keyboard.hpp  x7_controller.hpp
x7s/ROS2/x7s_ws/src/ARX_x7_ros2/arx_x7_controller/launch/: left_arm.launch.py  left_arm_inference.launch.py  right_arm.launch.py  right_arm_inference.launch.py
x7s/ROS2/x7s_ws/src/ARX_x7_ros2/arx_x7_controller/src/: keyboard.cpp  x7_controller.cpp
x7s/ROS2/x7s_ws/src/arxmsgros2/arm_control/: CMakeLists.txt
x7s/py/ARX_x7_python/: README.md  setup.sh  test_dual_arm.py  test_keyboard.py  test_single_arm.py
x7s/py/ARX_x7_python/bimanual/: CMakeLists.txt  __init__.py
x7s/py/ARX_x7_python/bimanual/script/: single_arm.py
x7s/py/ARX_x7_python/bimanual/src/: single_arm_interface.cpp
(+54 files in other folders)
